Bug 148616 - FILEOPEN PPTX A certain POTX template is slow to open
Summary: FILEOPEN PPTX A certain POTX template is slow to open
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium minor
Assignee: Aron Budea
URL:
Whiteboard: target:24.8.0 inReleaseNotes:24.8
Keywords: haveBacktrace, perf
Depends on:
Blocks: PPTX
  Show dependency treegraph
 
Reported: 2022-04-15 18:35 UTC by Buovjaga
Modified: 2024-06-21 14:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Slow template (4.47 MB, application/vnd.openxmlformats-officedocument.presentationml.template)
2022-04-15 18:35 UTC, Buovjaga
Details
Perf flamegraph (1.18 MB, image/svg+xml)
2022-04-15 18:35 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2022-04-15 18:35:02 UTC
Created attachment 179594 [details]
Slow template

Originally reported by Dedoimedo: https://www.dedoimedo.com/computers/libreoffice-7-2-review.html

Template from MS https://templates.office.com/en-US/Organic-presentation-TM78453729

Takes about 25 secs to open.

Oldest tested version 6.3.

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b2b821715a3745718a941fa99dda92137c0f0c86
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 1 Buovjaga 2022-04-15 18:35:38 UTC
Created attachment 179595 [details]
Perf flamegraph
Comment 2 Timur 2022-04-22 12:33:57 UTC
ImplementationError doesn't sound well but it really means this is improvement, not a regression, couldn't be open with LO 5.0.
Seems like slide 5 is the culprit.
Comment 3 QA Administrators 2024-04-22 03:15:25 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2024-04-22 05:57:50 UTC
Still slow

Arch Linux 64-bit
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
24.2.2-2
Calc: threaded
Comment 5 Commit Notification 2024-05-02 04:32:23 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a5fc2a414517bfcef164f527ef7ab1658fcef5d

tdf#148616 Speed up finding custom shape guide value

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2024-05-03 12:20:32 UTC
It's instant in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3f2d56d486da2006e24444cfa6f2f63700a14fae
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded

Thanks!