tdf#148616 Speed up finding custom shape guide value

Use a lookup hash map instead of linear search

Change-Id: I54c9509740d90ca3f7479dfc16a6aeffd82a405d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166879
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Aron Budea <aron.budea@collabora.com>